--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3877,7 +3877,7 @@ input, select, textarea {
 		background-image: url("images/Diagram.jpeg");
 		background-position: top right;
 		background-repeat: no-repeat;
-		background-size: 100% 100%;
+		background-size: cover, cover;
 	}
 
 		#intro p {
