--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3874,7 +3874,7 @@ input, select, textarea {
 
 	#intro {
 		background-attachment: fixed;
-		background-image: url("images/Diagram.jpeg");
+		background-image: url("images/Diagram.jpg");
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: cover, cover;
