--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2536,27 +2536,27 @@ input, select, textarea {
 			}
 
 				.wrapper.style1 .icon.major:before {
-					color: #5e42a6;
+					color: #6095BD;
 				}
 
 				.wrapper.style1-alt .icon.major:before {
-					color: #493382;
+					color: #2F7EBA;
 				}
 
 				.wrapper.style2 .icon.major:before {
-					color: #5052b5;
+					color: #F27C8E;
 				}
 
 				.wrapper.style2-alt .icon.major:before {
-					color: #3e4094;
+					color: #EB4B4B;
 				}
 
 				.wrapper.style3 .icon.major:before {
-					color: #b74e91;
+					color: #EB984B;
 				}
 
 				.wrapper.style3-alt .icon.major:before {
-					color: #953d75;
+					color: #E67D1C;
 				}
 
 /* Image */
