changed colours, wasn't working last time

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3236,31 +3236,31 @@ input, select, textarea {
 			}
 
 		.wrapper.alt {
-			background-color: #261c3e;
+			background-color: #220469;
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-color: #8A174E;
 		}
 
 		.wrapper.style1-alt {
-			background-color: #493382;
+			background-color: #690333;
 		}
 
 		.wrapper.style2 {
-			background-color: #5052b5;
+			background-color: #1D6CAD;
 		}
 
 		.wrapper.style2-alt {
-			background-color: #3e4094;
+			background-color: #014D8C;
 		}
 
 		.wrapper.style3 {
-			background-color: #b74e91;
+			background-color: #AB640E;
 		}
 
 		.wrapper.style3-alt {
-			background-color: #953d75;
+			background-color: #D4870D;
 		}
 
 		.wrapper.fullscreen {
