--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3370,7 +3370,7 @@ input, select, textarea {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		background-color: #340569;
+		background-color: #3D0212;
 		cursor: default;
 		padding: 1.75em 2em;
 	}
