--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3524,7 +3524,7 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #312450;
+		background: #380114;
 		cursor: default;
 		height: 100vh;
 		left: 0;
@@ -3535,6 +3535,7 @@ input, select, textarea {
 		top: 0;
 		width: 18em;
 		z-index: 10000;
+		font-family: 'Outfit', sans-serif;
 	}
 
 		#sidebar > .inner {
@@ -3761,14 +3762,14 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:before {
-				background: #3c2c62;
+				background: #5E1616;
 			}
 
 			#sidebar nav a:after {
-				background-image: -moz-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -webkit-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: -ms-linear-gradient(to right, #5e42a6, #b74e91);
-				background-image: linear-gradient(to right, #5e42a6, #b74e91);
+				background-image: -moz-linear-gradient(to right, #F7BC0C, #B8330B);
+				background-image: -webkit-linear-gradient(to right, #F7BC0C, #B8330B);
+				background-image: -ms-linear-gradient(to right, #F7BC0C, #B8330B);
+				background-image: linear-gradient(to right, #F7BC0C, #B8330B);
 				-moz-transition: max-width 0.2s ease;
 				-webkit-transition: max-width 0.2s ease;
 				-ms-transition: max-width 0.2s ease;
