added nonlinearities section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3930,7 +3930,7 @@ input, select, textarea {
   max-width: 600px;
   flex: 1;
   text-align: left;
-  color: #E0DCFC
+  color: #FCF2DC
 }
 
 /* ---------- Responsive (mobile) ---------- */
